app/assets/stylesheets/settings.css.scss
/*
 * Copyright 2013 Tasos Laskos <tasos.laskos@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

// Place all the styles related to the scans controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#setting_scan_per_user_limit,
#setting_scan_global_limit {
    width: 30px;
}

#setting_scan_target_blacklist_patterns,
#setting_scan_target_whitelist_patterns {
    width:  100%;
    height: 150px;
}

#settings {

    .modules input {
        margin-right: 10px;
        margin-top: 10px;
        clear: both
    }

    input#search {
        float: none;
        width: 240px;
    }

    #profile-modules {
        display: inline;
    }
    .accordion-group {
        border: 0px;
        border-bottom: 1px solid #E5E5E5
    }

    .plugin-options .label {
        display: inline;
        font-weight: bold;
    }

    .plugin-options input {
        display: inline;
    }

    .help-block {
        clear: both;
    }

    label {
        display: inline;
        padding-right: 10px;
    }
}

.settings_scan_allowed_types input {
    float: none;
}

